; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_tncs.c_tncs_free_imv.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_tncs.c_tncs_free_imv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tnc_if_imv = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tnc_if_imv*)* @tncs_free_imv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tncs_free_imv(%struct.tnc_if_imv* %0) #0 {
  %2 = alloca %struct.tnc_if_imv*, align 8
  store %struct.tnc_if_imv* %0, %struct.tnc_if_imv** %2, align 8
  %3 = load %struct.tnc_if_imv*, %struct.tnc_if_imv** %2, align 8
  %4 = getelementptr inbounds %struct.tnc_if_imv, %struct.tnc_if_imv* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @os_free(i32 %5)
  %7 = load %struct.tnc_if_imv*, %struct.tnc_if_imv** %2, align 8
  %8 = getelementptr inbounds %struct.tnc_if_imv, %struct.tnc_if_imv* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @os_free(i32 %9)
  %11 = load %struct.tnc_if_imv*, %struct.tnc_if_imv** %2, align 8
  %12 = getelementptr inbounds %struct.tnc_if_imv, %struct.tnc_if_imv* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @os_free(i32 %13)
  ret void
}

declare dso_local i32 @os_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
